--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Uno Due Tre (Light)",
+        "label": "Uno Due Tre",
         "uiTheme": "vs",
         "path": "./themes/light.json"
       }
