--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
         "label": "Uno Due Tre",
         "uiTheme": "vs",
         "path": "./themes/light.json"
+      },
+      {
+        "label": "Uno Due Tre (Dark)",
+        "uiTheme": "vs-dark",
+        "path": "./themes/dark.json"
       }
     ]
   },
