--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,12 @@
       "type": "npm",
       "script": "build",
       "problemMatcher": ["$tsc"],
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "focus": false,
+        "panel": "new"
+      },
       "group": {
         "kind": "build",
         "isDefault": true
