--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,7 @@
     "target": "es5",
     "outDir": "build"
   },
-  "files": [
-    "src/main.ts"
-  ],
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "files": ["src/main.ts"],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
