--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
         "echo": true,
         "reveal": "always",
         "focus": false,
-        "panel": "new"
+        "panel": "shared"
       },
       "group": {
         "kind": "build",
