--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "theme-unoduetre",
   "displayName": "Uno Due Tre",
-  "description": "A theme with three colors",
+  "description": "A collection of themes with three colors each",
   "version": "3.5.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/wavebeem/vscode-theme-unoduetre.git"
   },
   "icon": "img/icon.png",
-  "galleryBanner": {
-    "color": "#333333",
-    "theme": "dark"
-  },
   "publisher": "wavebeem",
   "engines": {
     "vscode": "^1.5.0"
