--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "editor.formatOnSave": true,
-  "workbench.editor.showTabs": true
+  "workbench.editor.showTabs": true,
+  "breadcrumbs.enabled": false
 }
