--- a/package.json
+++ b/package.json
@@ -1,75 +1,85 @@
 {
-  "name": "theme-unoduetre",
-  "displayName": "Uno Due Tre",
-  "description": "A collection of themes with three colors each",
-  "version": "3.6.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wavebeem/vscode-theme-unoduetre.git"
-  },
-  "icon": "img/icon.png",
-  "publisher": "wavebeem",
-  "engines": {
-    "vscode": "^1.5.0"
-  },
-  "categories": [
-    "Themes"
-  ],
-  "contributes": {
-    "themes": [
-      {
-        "label": "Uno Due Tre",
-        "uiTheme": "vs",
-        "path": "./themes/light.json"
-      },
-      {
-        "label": "Uno Due Tre (Dark)",
-        "uiTheme": "vs-dark",
-        "path": "./themes/dark.json"
-      },
-      {
-        "label": "Uno Due Tre (Nature)",
-        "uiTheme": "vs",
-        "path": "./themes/nature.json"
-      },
-      {
-        "label": "Uno Due Tre (Bubble Gum)",
-        "uiTheme": "vs",
-        "path": "./themes/bubblegum.json"
-      },
-      {
-        "label": "Uno Due Tre (Periwinkle)",
-        "uiTheme": "vs",
-        "path": "./themes/periwinkle.json"
-      },
-      {
-        "label": "Uno Due Tre (Midnight)",
-        "uiTheme": "vs-dark",
-        "path": "./themes/midnight.json"
-      },
-      {
-        "label": "Uno Due Tre (Ocean)",
-        "uiTheme": "vs-dark",
-        "path": "./themes/ocean.json"
-      }
-    ]
-  },
-  "bugs": {
-    "url": "https://github.com/wavebeem/vscode-theme-unoduetre/issues"
-  },
-  "homepage": "https://github.com/wavebeem/vscode-theme-unoduetre#readme",
-  "scripts": {
-    "prebuild": "tsc",
-    "build": "node build/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Brian Mock <brian@mockbrian.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^8.10.23",
-    "@types/tinycolor2": "^1.4.1",
-    "tinycolor2": "^1.4.1",
-    "typescript": "^3.0.1"
-  }
+	"name": "theme-unoduetre",
+	"displayName": "Uno Due Tre",
+	"description": "A collection of themes with three colors each",
+	"version": "3.6.0",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/wavebeem/vscode-theme-unoduetre.git"
+	},
+	"icon": "img/icon.png",
+	"publisher": "wavebeem",
+	"engines": {
+		"vscode": "^1.5.0"
+	},
+	"categories": [
+		"Themes"
+	],
+	"contributes": {
+		"themes": [
+			{
+				"label": "Uno Due Tre",
+				"uiTheme": "vs",
+				"path": "./themes/light.json"
+			},
+			{
+				"label": "Uno Due Tre (Dark)",
+				"uiTheme": "vs-dark",
+				"path": "./themes/dark.json"
+			},
+			{
+				"label": "Uno Due Tre (Nature)",
+				"uiTheme": "vs",
+				"path": "./themes/nature.json"
+			},
+			{
+				"label": "Uno Due Tre (Bubble Gum)",
+				"uiTheme": "vs",
+				"path": "./themes/bubblegum.json"
+			},
+			{
+				"label": "Uno Due Tre (Periwinkle)",
+				"uiTheme": "vs",
+				"path": "./themes/periwinkle.json"
+			},
+			{
+				"label": "Uno Due Tre (Sprinkles)",
+				"uiTheme": "vs-dark",
+				"path": "./themes/sprinkles.json"
+			},
+			{
+				"label": "Uno Due Tre (Midnight)",
+				"uiTheme": "vs-dark",
+				"path": "./themes/midnight.json"
+			},
+			{
+				"label": "Uno Due Tre (Ocean)",
+				"uiTheme": "vs-dark",
+				"path": "./themes/ocean.json"
+			}
+		]
+	},
+	"bugs": {
+		"url": "https://github.com/wavebeem/vscode-theme-unoduetre/issues"
+	},
+	"homepage": "https://github.com/wavebeem/vscode-theme-unoduetre#readme",
+	"scripts": {
+		"prebuild": "tsc",
+		"build": "node build/main.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "Brian Mock <brian@mockbrian.com>",
+	"license": "MIT",
+	"devDependencies": {
+		"@types/node": "^8.10.23",
+		"@types/tinycolor2": "^1.4.1",
+		"tinycolor2": "^1.4.1",
+		"typescript": "^3.0.1"
+	},
+	"__metadata": {
+		"id": "e18a4366-db45-4ced-ba20-d6316dc6c79b",
+		"publisherDisplayName": "Brian Mock",
+		"publisherId": "dd905317-d989-4b98-9bc3-3cc12206629d"
+	}
 }
