--- a/package.json
+++ b/package.json
@@ -76,5 +76,10 @@
 		"@types/tinycolor2": "^1.4.1",
 		"tinycolor2": "^1.4.1",
 		"typescript": "^3.0.1"
+	},
+	"__metadata": {
+		"id": "e18a4366-db45-4ced-ba20-d6316dc6c79b",
+		"publisherDisplayName": "Brian Mock",
+		"publisherId": "dd905317-d989-4b98-9bc3-3cc12206629d"
 	}
 }
