--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
 	"scripts": {
 		"prebuild": "tsc",
 		"build": "node build/main.js",
-		"postversion": "vsce publish",
+		"postversion": "git push origin HEAD && git push --tags && vsce publish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
