--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "noUnusedParameters": true,
     "strict": true,
     "module": "commonjs",
-    "target": "es5",
+    "esModuleInterop": true,
+    "target": "ES2018",
     "outDir": "build"
   },
   "files": ["src/main.ts"],
