--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 	},
 	"homepage": "https://github.com/wavebeem/vscode-theme-unoduetre#readme",
 	"scripts": {
+		"upgrade": "npm-check -u",
 		"prebuild": "tsc",
 		"build": "node build/main.js",
 		"postversion": "git push origin HEAD && git push --tags && vsce publish",
@@ -74,7 +75,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^13.1.7",
-		"@types/tinycolor2": "^1.4.1",
+		"@types/tinycolor2": "^1.4.2",
 		"npm-check": "^5.9.0",
 		"tinycolor2": "^1.4.1",
 		"typescript": "^3.7.4"
