--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
 		"upgrade": "npm-check -u",
 		"prebuild": "tsc",
 		"build": "node build/main.js",
-		"postversion": "git push origin HEAD && git push --tags && vsce publish",
+		"postversion": "git push && git push --tags && vsce publish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
-	"author": "Brian Mock <brian@mockbrian.com>",
+	"author": "Brian Mock <brian@wavebeem.com>",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^13.13.5",
