--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
 		"upgrade": "npm-check -u",
 		"prebuild": "tsc",
 		"build": "node build/main.js",
-		"postversion": "git push && git push --tags && vsce publish",
+		"postversion": "git push --follow-tags && vsce publish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
