--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "ES2018",
-    "outDir": "build"
+    "outDir": "build",
+    "incremental": true
   },
   "files": ["src/main.ts"],
   "include": ["src/**/*"],
