--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"upgrade": "npm-check -u",
 		"prebuild": "tsc",
 		"build": "node build/main.js",
+		"package": "npm run build && vsce package",
 		"postversion": "git push --follow-tags && vsce publish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -75,14 +76,15 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^15.12.2",
-		"@types/tinycolor2": "^1.4.2",
 		"npm-check": "^5.9.2",
-		"tinycolor2": "^1.4.2",
 		"typescript": "^4.3.2"
 	},
 	"__metadata": {
 		"id": "e18a4366-db45-4ced-ba20-d6316dc6c79b",
 		"publisherDisplayName": "Brian Mock",
 		"publisherId": "dd905317-d989-4b98-9bc3-3cc12206629d"
+	},
+	"dependencies": {
+		"colord": "^2.9.3"
 	}
 }
