--- a/package.json
+++ b/package.json
@@ -63,6 +63,11 @@
 				"path": "./themes/sprinkles-color-theme.json"
 			},
 			{
+				"label": "Uno Due Tre (Sprinkles 2)",
+				"uiTheme": "vs-dark",
+				"path": "./themes/sprinkles2-color-theme.json"
+			},
+			{
 				"label": "Uno Due Tre (Midnight)",
 				"uiTheme": "vs-dark",
 				"path": "./themes/midnight-color-theme.json"
