--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
 				"path": "./themes/light-color-theme.json"
 			},
 			{
+				"label": "Uno Due Tre 2",
+				"uiTheme": "vs",
+				"path": "./themes/light2-color-theme.json"
+			},
+			{
 				"label": "Uno Due Tre (Dark)",
 				"uiTheme": "vs-dark",
 				"path": "./themes/dark-color-theme.json"
