--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
 	"scripts": {
 		"upgrade": "npm-check -u",
 		"build": "ts-node src/main.ts",
+		"prepackage": "rm -rf *.vsix",
 		"package": "npm run build && vsce package",
+		"load": "npm run package && code --install-extension *.vsix",
 		"postversion": "git push --follow-tags && vsce publish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -75,6 +77,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^15.12.2",
+		"ansi-colors": "^4.1.3",
 		"npm-check": "^5.9.2",
 		"typescript": "^4.3.2"
 	},
