--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "theme-unoduetre",
 	"displayName": "Uno Due Tre",
 	"description": "A collection of themes with three colors each",
-	"version": "4.1.0",
+	"version": "5.0.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/wavebeem/vscode-theme-unoduetre.git"
@@ -20,42 +20,42 @@
 			{
 				"label": "Uno Due Tre",
 				"uiTheme": "vs",
-				"path": "./themes/light.json"
+				"path": "./themes/light-color-theme.json"
 			},
 			{
 				"label": "Uno Due Tre (Dark)",
 				"uiTheme": "vs-dark",
-				"path": "./themes/dark.json"
+				"path": "./themes/dark-color-theme.json"
 			},
 			{
 				"label": "Uno Due Tre (Nature)",
 				"uiTheme": "vs",
-				"path": "./themes/nature.json"
+				"path": "./themes/nature-color-theme.json"
 			},
 			{
 				"label": "Uno Due Tre (Bubble Gum)",
 				"uiTheme": "vs",
-				"path": "./themes/bubblegum.json"
+				"path": "./themes/bubblegum-color-theme.json"
 			},
 			{
 				"label": "Uno Due Tre (Periwinkle)",
 				"uiTheme": "vs",
-				"path": "./themes/periwinkle.json"
+				"path": "./themes/periwinkle-color-theme.json"
 			},
 			{
 				"label": "Uno Due Tre (Sprinkles)",
 				"uiTheme": "vs-dark",
-				"path": "./themes/sprinkles.json"
+				"path": "./themes/sprinkles-color-theme.json"
 			},
 			{
 				"label": "Uno Due Tre (Midnight)",
 				"uiTheme": "vs-dark",
-				"path": "./themes/midnight.json"
+				"path": "./themes/midnight-color-theme.json"
 			},
 			{
 				"label": "Uno Due Tre (Ocean)",
 				"uiTheme": "vs-dark",
-				"path": "./themes/ocean.json"
+				"path": "./themes/ocean-color-theme.json"
 			}
 		]
 	},
@@ -66,7 +66,10 @@
 	"scripts": {
 		"upgrade": "npm-check -u",
 		"build": "ts-node src/main.ts",
+		"prepackage": "rm -rf *.vsix",
 		"package": "npm run build && vsce package",
+		"load": "npm run package && code --install-extension *.vsix",
+		"version": "npm run build",
 		"postversion": "git push --follow-tags && vsce publish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -75,6 +78,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^15.12.2",
+		"ansi-colors": "^4.1.3",
 		"npm-check": "^5.9.2",
 		"typescript": "^4.3.2"
 	},
