--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
 	"author": "Brian Mock <brian@wavebeem.com>",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^15.12.2",
+		"@types/node": "^18.16.3",
 		"ansi-colors": "^4.1.3",
-		"npm-check": "^5.9.2",
-		"typescript": "^4.3.2"
+		"npm-check": "^6.0.1",
+		"prettier": "^2.8.8",
+		"typescript": "^5.0.4"
 	},
 	"__metadata": {
 		"id": "e18a4366-db45-4ced-ba20-d6316dc6c79b",
@@ -53,7 +54,7 @@
 		"publisherId": "dd905317-d989-4b98-9bc3-3cc12206629d"
 	},
 	"dependencies": {
-		"@vscode/vsce": "^2.18.0",
+		"@vscode/vsce": "^2.19.0",
 		"colord": "^2.9.3",
 		"ts-node": "^10.9.1"
 	}
