--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "theme-miasma",
   "displayName": "Miasma",
-  "description": "wavebeem's dark green color theme",
+  "description": "wavebeem's toxic green color theme",
   "version": "1.0.0",
   "repository": {
     "type": "git",
